<resources>
    <string name="app_name">UtsJastip</string>
    <string name="action_settings">Settings</string>
    <string name="nama_app">SELAMAT DATANG di Declaosa</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AppJastip</string>
    <string name="pemesan_hint">Nama Pemesan</string>
    <string name="barang_hint">Nama Barang</string>
    <string name="harga_hint">Harga Barang</string>
    <string name="jumlah_hint">Jumlah Barang</string>
    <string name="tombol_submit">Submit</string>
    <string name="tombol_tambah">Tambah Pesanan</string>
    <string name="tombol_lihat">Lihat Pesanan</string>
    <string name="tombol_edit">Save</string>
    <string name="tombol_cancel">Cancel</string>
    <string name="tombol_dialog_edit">Edit</string>
    <string name="tombol_dialog_delete">Delete</string>
        <string name="title_view">Data Pesan</string>
    <string name="title_edit">Edit Data </string>
    <string name="tombol_koleksi">Lihat Koleksi</string>
    <string name="tombol_ig">KUNJUNGI KAMI</string>
</resources>
