<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/text_id_barang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"

        />
    <EditText
        android:id="@+id/editText_pemesan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Nama Pemesan" />

    <EditText
        android:id="@+id/editText_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_pemesan"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="Nama Barang"
        android:ems="10">

    </EditText>

    <EditText
        android:id="@+id/editText_jumlah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_nama"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="Jumlah pesan"
        android:ems="10" />

    <EditText
        android:id="@+id/editText_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_jumlah"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:hint="Harga"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_harga"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_edit" />

        <Button
            android:id="@+id/button_cancel_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_cancel" />
    </LinearLayout>


</RelativeLayout>